Fix a problem restoring relative paths